<resources>
    <string name="app_name">KARAOKE</string>
    <string name="details_play">Play</string>
    <string name="details_recorder">Recorder</string>
    <string name="details_home">Home</string>
    <string name="details_menu">Menu</string>
    <string name="sound_effect">Sound</string>
    <string name="details_colection">Collection</string>
    <string name="details_director">Director:</string>
    <string name="details_actors">Star:</string>
    <string name="details_des">Details:</string>
    <string name="details_area">Regional:</string>
    <string name="details_episodes">Episode Count：</string>
    <string name="details_year">Year：</string>
    <string name="itv_exit_confirm_text">Exit</string>
    <string name="itv_exit_cancle_text">Back</string>
    <string name="no_weather_info">no weather info</string>
    <string name="config">OK</string>
    <string name="action_settings">Settings</string>
    <string name="ktv_luyin">Recording...</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_hint">Hint</string>
    <string name="infor_title">KTV is laoding,please waiting......</string>
    <string name="infor_title_hint">Hit the【home】 button，Into the android interface</string>
    <string name="key_del">Del</string>
    <string name="key_ok">OK</string>
    <string name="key_back">Exit</string>
    <string name="key_info1">Please enter your password</string>
    <string name="key_info2">Wrong password, please enter again</string>
    <string name="key_info3">Please enter your new password</string>
    <string name="key_info4">Please confirm the new password again</string>
    <string name="key_info5">Enter the password for six</string>
    <string name="key_info6">succeed</string>
    <string name="key_info7">Please enter your old password</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="left">《</string>
    <string name="right">》</string>
    <string name="setting_tittle">KTV Setting</string>
    <string name="songs_manager">Songs Manager</string>
    <string name="pw_switch">APP Password：</string>
    <string name="sg_switch">Intelligent Song deletion ：</string>
    <string name="pf_switch">Song Score ：</string>
    <string name="boot_audio">Boot volume：</string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="open_start_tx">WinStart Manager：</string>
    <string name="message_scoll">Scrolling Setting</string>
    <string name="setting_save">Save</string>
    <string name="pw_on">on</string>
    <string name="pw_off">off</string>
    <string name="vul_mr">Default</string>
    <string name="ktv">KTV</string>
    <string name="android">Android</string>
    <string name="move">Move</string>
    <string name="gongju">Tool</string>
    <string name="password_setting">Password modification</string>
    <string name="batch_add_songs">Batch add songs</string>
    <string name="batch_delete_songs">batch delete songs</string>
    <string name="update_data">Update data</string>
    <string name="gongfang_setting">Amplifier setting</string>
    <string name="gongfang_manager">Amplifier manager</string>
    <string name="batch_songs1">The disk was not detected </string>
    <string name="batch_songs2">No songs are allowed at the current maximum number of songs </string>
    <string name="batch_songs3">No batch songs were found</string>
    <string name="batch_songs4">The songs were repeated or not found</string>
    <string name="batch_songs5">Are you sure you add these songs?</string>
    <string name="batch_songs9">Are you sure you delete these songs?</string>
    <string name="batch_songs8">Confirm upgrade information?</string>
    <string name="batch_songs6">Yes</string>
    <string name="batch_songs7">No</string>
    <string name="batch_songs10">Failed to detect the U disk upgrade package</string>
    <string name="batch_songs11">Could not find the corresponding batch songs</string>
    <string name="song_handle1">Public player</string>
    <string name="song_handle2">Select</string>
    <string name="song_handle3">Priority</string>
    <string name="song_handle4">Operation complete！</string>
    <string name="song_handle5">Collect</string>
    <string name="song_handle6">Delete</string>
    <string name="song_handle7">Play</string>
    <string name="song_handle8">All add</string>
    <string name="song_handle9">Share</string>
    <string name="song_handle10">Pause</string>
    <string name="song_handle11">Continue</string>
    <string name="song_all_add_ok">All add</string>
    <string name="score_titel">Score report card</string>
    <string name="score_sing">score:</string>
    <string name="score_tip">tip:</string>
    <string name="score_singer">singer:</string>
    <string name="score_name">song:</string>
    <string name="scroll_tip">Use the default running lights</string>
    <string name="scroll_default">Welcome to use Longtv</string>
    <string name="qr_code">Local</string>
    <string name="lsearch">Search</string>
    <string name="ldownload_name">Download</string>
    <string name="lwifi_name">My</string>
    <string name="share_titel">Share the record breezily</string>
    <string name="share_method_1">uploading...  </string>
    <string name="share_method_2">Method: </string>
    <string name="share_content_1">open the scanister,scan the QRcode in the center</string>
    <string name="share_content_2">open the scanister,scan the QRcode in the center,or Pay attention to cloud cat Official Accounts</string>
    <string name="share_song">song:</string>
    <string name="share_singer">singer:</string>
    <string name="share_duration">duration:</string>
    <string name="share_back">Back</string>
    <string name="phone_scan">Scan</string>
    <string name="phone_app_download">APP Download</string>
    <string name="phone_link_code">Link code</string>
    <string name="phone_step_1">Step 1: scan APP download code, or login to download and install APP.</string>
    <string name="phone_step_2">Step 2: open the APP, scan or enter the connection code, and synchronize the data after success.</string>
    <string name="phone_local_IP">Local IP:</string>
    <string name="phone_MAC">MAC:</string>
    <string name="phone_wx">weixin link</string>
    <string name="select_success">Select successed</string>
    <string name="no_found">No songs found</string>
    <string name="list_full">The list was full</string>
    <string name="song_existed">The song already exist </string>
    <string name="collect_success">collect successed</string>
    <string name="opration_success">opration success</string>
    <string name="opration_fail">opration fail</string>
    <string name="last_item">......</string>
    <string name="empty_view">You do not  have a song yet, Please go to the VOD to get a song</string>
    <string name="ethernet_title">Ethernet</string>
    <string name="ethernet_title_hint">Ethernet Set</string>
    <string name="ethernet_auto">Auto</string>
    <string name="ethernet_auto_open">ON</string>
    <string name="ethernet_auto_close">OFF</string>
    <string name="ethernet_address">Ip</string>
    <string name="ethernet_netmask">Netmask</string>
    <string name="ethernet_gateway">Gateway</string>
    <string name="ethernet_dns">DNS</string>
    <string name="ethernet_commit">Commit</string>
    <string name="ethernet_commit_ok">Set Ok</string>
    <string name="ethernet_commit_faile">Set faile</string>
    <string name="ethernet_ip_error">Ip error</string>
    <string name="ethernet_mask_error"> Netmask error</string>
    <string name="ethernet_gateway_error">Gateway error</string>
    <string name="ethernet_dns_error">DNS error</string>
    <string name="net_set_title_hint">Network Set</string>
    <string name="net_set_ethenet">Ethernet</string>
    <string name="net_set_hot">Hotpot</string>
    <string name="net_set_wifi">Wi-Fi</string>
    <string name="net_set_title">Network</string>
    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_title_hint">Wi-Fi Set</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_connecting">(Connecting)</string>
    <string name="wifi_connected">(Connected!)</string>
    <string name="wifi_connect_fail">(Connect failed)</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_unenable">No available Wi-Fi</string>
    <string name="wifi_progress">Scanning available Wi-Fi···</string>
    <string name="wifi_add">Add SSID</string>
    <string name="wifi_add_ssid">SSID</string>
    <string name="wifi_add_secure">Encryption</string>
    <string name="wifi_add_password">Password</string>
    <string name="wifi_forget_text">Please select operation</string>
    <string name="wifi_forget_ok">Forget</string>
    <string name="wifi_forget_cancel">Cancel</string>
    <string name="password_dismiss">Password Display</string>
    <string name="share_record">TO share the record</string>
    <string name="share_target">Please open the WeChat scan qr code to send to a friend or send a friend circle</string>
    <string name="share_weixin">You can also pay attention to the WeChat public song and share it.</string>
    <string name="class_1">Language</string>
    <string name="class_2">Dance</string>
    <string name="class_3">Theme</string>
    <string name="class_4">Hot</string>
    <string name="home_1">Singer</string>
    <string name="home_2">Song</string>
    <string name="home_3">Class</string>
    <string name="home_4">Recommend</string>
    <string name="home_5">Ranking</string>
    <string name="home_6">Local song</string>
    <string name="home_7">Network TV</string>
    <string name="home_8">File Manager</string>
    <string name="home_9">APP Market</string>
    <string name="home_10">Library Manager</string>
    <string name="home_11">All APP</string>
    <string name="home_12">Settings</string>
    <string name="home_13">Mine</string>
    <string name="language_1">Chinese</string>
    <string name="language_2">English</string>
    <string name="language_3">Min Nan</string>
    <string name="language_4">Korean</string>
    <string name="language_5">Cantonese</string>
    <string name="language_6">Japanese</string>
    <string name="mine_1"> Favorites</string>
    <string name="mine_2">History</string>
    <string name="mine_3">Version information</string>
    <string name="mine_4">Online upgrade</string>
    <string name="empty_songlist">No such song information....</string>
    <string name="reset_search_condition">Select more operations by the menu key</string>
    <string name="reset_search_condition2">""</string>
    <string name="equalizer_100">MIC_1</string>
    <string name="equalizer_300">MIC_2</string>
    <string name="equalizer_1K">TONE</string>
    <string name="equalizer_3K">VOLUME</string>
    <string name="class_all">All</string>
	<string name="singer_class1">C.N.-M</string>
    <string name="singer_class2">C.N.-F</string>
    <string name="singer_class3">H.K.-M</string>
    <string name="singer_class4">H.K.-F</string>
    <string name="singer_class5">T.W.-M</string>
    <string name="singer_class6">T.W.-F</string>
    <string name="singer_class7">Foreign-M</string>
    <string name="singer_class8">Foreign-F</string>
    <string name="singer_class9">Others-M</string>
    <string name="singer_class10">Others-F</string>
    <string name="singer_class11">Bands</string>
     <string name="sound_mode_1">STUDIO</string>
    <string name="sound_mode_2">KTV</string>
    <string name="sound_mode_3">CONCERT</string>
    <string name="sound_mode">Sound mode:</string>
</resources>