<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="436dp"
    android:layout_height="300dp"
    android:id="@+id/dialogid"
    android:orientation="vertical"
    android:background="@drawable/jianpanbeijing">


<RelativeLayout
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
       android:background="@drawable/shurukaung">	
      <!--  <TextView
        android:id="@+id/pass_info"
        android:layout_marginLeft="10dp"
        android:layout_width="384px"
        android:layout_height="wrap_content"
		android:textColor = "#666666"
        android:textSize="26sp" 
		android:text="@string/key_info1"
        />	-->
    
	<EditText
        android:id="@+id/edit_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
		android:gravity="center"
		android:textColor = "#333333"
        android:textSize="20sp"  
		android:maxLength="25" 	
		android:hint="@string/key_info7"
		android:inputType="numberPassword"
		android:layout_centerVertical="true"	

        android:focusable="true"
		android:background="@drawable/edit_input_selecter"/>
    <Button
         android:id="@+id/key_del"
		 android:layout_toRightOf ="@+id/edit_input"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:textSize="20sp" 
		 android:background="@drawable/pass_delete_selecter"
		 android:layout_centerVertical="true"
		
		 android:focusable="true"
		 android:focusableInTouchMode="true" />
</RelativeLayout>
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
      
        android:layout_gravity="center_horizontal"> 	
 <Button  
            android:id="@+id/key_0"  
            android:layout_height="76px"  
            android:layout_width="76px"
			android:layout_marginLeft="17px" 
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_0"
            android:textSize="@dimen/password_key"/>
		<Button  
            android:id="@+id/key_1"   
            android:layout_height="76px"  
            android:layout_width="76px" 
			android:layout_marginLeft="19px"
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_1"
            android:textSize="@dimen/password_key"/>		
        <Button  
            android:id="@+id/key_2"  
            android:layout_width="76px"  
            android:layout_height="76px" 
			android:layout_marginLeft="19px"
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_2"
			android:textSize="@dimen/password_key"
            />
		<Button  
            android:id="@+id/key_3"  
            android:layout_width="76px"  
            android:layout_height="76px"
			android:layout_marginLeft="19px" 
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_3"
            android:textSize="@dimen/password_key"/>
		<Button  
            android:id="@+id/key_4"   
            android:layout_width="76px"  
            android:layout_height="76px"
			android:layout_marginLeft="19px"  
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_4"
            android:textSize="@dimen/password_key"/>
   
</LinearLayout>
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
      
        android:layout_gravity="center_horizontal"> 	
        <Button  
            android:id="@+id/key_5"  
            android:layout_height="76px"  
            android:layout_width="76px"
			android:layout_marginLeft="19px" 
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_5"
            android:textSize="@dimen/password_key"/>
		<Button  
            android:id="@+id/key_6"   
            android:layout_height="76px"  
            android:layout_width="76px" 
			android:layout_marginLeft="19px"
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_6"
            android:textSize="@dimen/password_key"/>		
        <Button  
            android:id="@+id/key_7"  
            android:layout_width="76px"  
            android:layout_height="76px" 
			android:layout_marginLeft="19px"
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_7"
            android:textSize="@dimen/password_key"/>
		<Button  
            android:id="@+id/key_8"  
            android:layout_width="76px"  
            android:layout_height="76px"
			android:layout_marginLeft="19px" 
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_8"
            android:textSize="@dimen/password_key"/>
		<Button  
            android:id="@+id/key_9"   
            android:layout_width="76px"  
            android:layout_height="76px"
			android:layout_marginLeft="19px"  
			android:textColor="@color/white"
			android:background="@drawable/btn_key_selecter2"
			android:text="@string/key_9"
            android:textSize="@dimen/password_key"/>
   
</LinearLayout>
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"> 
         <Button
         android:id="@+id/key_ok"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:textSize="20sp" 
		 android:background="@drawable/button_save_selecter"
		 android:textColor="@color/white"
		 android:text="@string/key_ok"
		 android:layout_marginLeft="100dp"/>
         <Button
         android:id="@+id/key_back"
         android:layout_width="100dp"
         android:layout_height="50dp"
		 android:layout_marginLeft="47dp"
         android:textSize="20sp" 
		 android:background="@drawable/button_save_selecter"
		 android:textColor="@color/white"
		 android:text="@string/key_back"
		 />
</LinearLayout>
 <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"> 
</RelativeLayout>
</LinearLayout>
